@@ -42,6 +42,7 @@ lwip211_v1_0:
 Upgrade lwip to open source version 2.1.1
 Fix cache handling in RX path for GEM.
 Fix freertos echo server compilation on emaclite platform.
+Pick correct compiler for R5.
 
 qspipsu_v1_9:
 Resolved MISRA-C:2012 violations in safety mode(CR#1014359)
